vlib/v/checker/tests/assign_expr_channel_push.out
vlib/v/checker/tests/assign_expr_channel_push.vv:2:3: error: Trying to assign the result of a channel push operation (<-) to a variable. This is invalid, because the push operation does not return a result.
    1 | ch := chan f64{}
    2 | _ := ch <- 4.56
      |   ~~
