vlib/v/checker/tests/assign_expr_channel_push.vv
ch := chan f64{}
_ := ch <- 4.56
